Update buildscript
- Reformatted plugin declarations
- Added CI check
- Added -Xmx4G and -XX:+UseZGZ args
- Reformatted dependencies configuration
- Refactored tasks configuration