@@ -1,14 +1,18 @@
 import java.time.Instant
 
 plugins {
-  id("fabric-loom") version "0.10.64"
+  id(/*net.fabricmc.*/ "fabric-loom") version "0.10.64"
   id("io.github.juuxel.loom-quiltflower-mini") version "1.2.1"
   id("net.nemerosa.versioning") version "2.15.1"
-  id("signing")
+  id("org.gradle.signing")
 }
 
 group = "dev.sapphic"
 version = "1.0.0"
+
+if ("CI" in System.getenv()) {
+  version = "$version-${versioning.info.build}"
+}
 
 java {
   withSourcesJar()
@@ -21,6 +25,8 @@ loom {
 
   runs {
     configureEach {
+      vmArgs("-Xmx4G", "-XX:+UseZGC")
+
       property("mixin.debug", "true")
       property("mixin.debug.export.decompile", "false")
       property("mixin.debug.verbose", "true")
@@ -42,20 +48,27 @@ repositories {
 dependencies {
   minecraft("com.mojang:minecraft:1.18.1")
   mappings(loom.officialMojangMappings())
-  modImplementation("net.fabricmc:fabric-loader:0.12.11")
-  implementation("org.jetbrains:annotations:23.0.0")
+
+  modImplementation("net.fabricmc:fabric-loader:0.12.12")
   implementation("org.checkerframework:checker-qual:3.20.0")
+
   modRuntimeOnly("com.terraformersmc:modmenu:3.0.0")
 }
 
 tasks {
   compileJava {
     with(options) {
-      release.set(8)
-      isFork = true
       isDeprecation = true
       encoding = "UTF-8"
-      compilerArgs.addAll(listOf("-Xlint:all", "-parameters"))
+      isFork = true
+      compilerArgs.addAll(
+        listOf(
+          "-Xlint:all",
+          "-Xlint:-processing",
+          "-parameters" // JEP 118
+        )
+      )
+      release.set(8)
     }
   }
 
@@ -66,7 +79,7 @@ tasks {
   }
 
   jar {
-    from("/LICENSE")
+    from("/LICENSE.md")
 
     manifest.attributes(
       "Build-Timestamp" to Instant.now(),
@@ -79,15 +92,12 @@ tasks {
         System.getProperty("java.vm.version")
       })",
       "Built-By" to GradleVersion.current(),
-
       "Implementation-Title" to project.name,
       "Implementation-Version" to project.version,
       "Implementation-Vendor" to project.group,
-
       "Specification-Title" to "FabricMod",
       "Specification-Version" to "1.0.0",
       "Specification-Vendor" to project.group,
-
       "Sealed" to "true"
     )
   }
@@ -97,13 +107,8 @@ tasks {
     val keystore = property("signing.mods.keystore")
     val password = property("signing.mods.password")
 
-    listOf(remapJar, remapSourcesJar).forEach {
-      it.get().doLast {
-        if (!project.file(keystore!!).exists()) {
-          error("Missing keystore $keystore")
-        }
-
-        val file = outputs.files.singleFile
+    fun Sign.antSignJar(task: Task) =
+      task.outputs.files.forEach { file ->
         ant.invokeMethod(
           "signjar", mapOf(
             "jar" to file,
@@ -114,18 +119,34 @@ tasks {
             "preservelastmodified" to true
           )
         )
-        signing.sign(file)
       }
+
+    val signJar by creating(Sign::class) {
+      dependsOn(remapJar)
+
+      doFirst {
+        antSignJar(remapJar.get())
+      }
+
+      sign(remapJar.get())
     }
-  }
+    val signSourcesJar by creating(Sign::class) {
+      dependsOn(remapSourcesJar)
+      /*
+      Loom does not expose remapSourcesJar as a Jar task
+      so we target the original sourcesJar task here
+      NOTE This will fail when the internals change
+      */
 
-  assemble {
-    dependsOn(versionFile, remapJar, remapSourcesJar)
+      doFirst {
+        antSignJar(getByName<Jar>("sourcesJar"))
+      }
 
-    doFirst {
-      delete(buildDir.resolve("libs").listFiles { _, name ->
-        name.endsWith("-dev.jar")
-      })
+      sign(getByName<Jar>("sourcesJar"))
+    }
+
+    assemble {
+      dependsOn(signJar, signSourcesJar)
     }
   }
 }
